--- a/Proposal.tex
+++ b/Proposal.tex
@@ -4,55 +4,68 @@
 
 \begin{document}
 \section{Basic Info}
-This data approach student achievement in secondary education of two Portuguese schools. The data attributes include student grades, demographic, social and school related features) and it was collected by using school reports and questionnaires. Two datasets are provided regarding the performance in two distinct subjects: Mathematics (mat) and Portuguese language (por). In [Cortez and Silva, 2008], the two datasets were modeled under binary/five-level classification and regression tasks. Important note: the target attribute G3 has a strong correlation with attributes G2 and G1. This occurs because G3 is the final year grade (issued at the 3rd period), while G1 and G2 correspond to the 1st and 2nd period grades. It is more difficult to predict G3 without G2 and G1, but such prediction is much more useful (see paper source for more details).
-
-Attribute Information:
-1 school - student's school (binary: 'GP' - Gabriel Pereira or 'MS' - Mousinho da Silveira) \\
-2 sex - student's sex (binary: 'F' - female or 'M' - male) \\
-3 age - student's age (numeric: from 15 to 22) \\
-4 address - student's home address type (binary: 'U' - urban or 'R' - rural) \\
-5 famsize - family size (binary: 'LE3' - less or equal to 3 or 'GT3' - greater than 3) \\
-6 Pstatus - parent's cohabitation status (binary: 'T' - living together or 'A' - apart) \\
-7 Medu - mother's education (numeric: 0 - none, 1 - primary education (4th grade), 2 to 5th to 9th grade, 3 to secondary education or 4 to higher education) \\
-8 Fedu - father's education (numeric: 0 - none, 1 - primary education (4th grade), 2 to 5th to 9th grade, 3 to secondary education or 4 to higher education) \\
-9 Mjob - mother's job (nominal: 'teacher', 'health' care related, civil 'services' (e.g. administrative or police), 'at home' or 'other') \\
-10 Fjob - father's job (nominal: 'teacher', 'health' care related, civil 'services' (e.g. administrative or police), 'at home' or 'other') \\
-11 reason - reason to choose this school (nominal: close to 'home', school 'reputation', 'course' preference or 'other') \\
-12 guardian - student's guardian (nominal: 'mother', 'father' or 'other') \\
-13 traveltime - home to school travel time (numeric: 1 - <15 min., 2 - 15 to 30 min., 3 - 30 min. to 1 hour, or 4 - >1 hour) \\
-14 studytime - weekly study time (numeric: 1 - <2 hours, 2 - 2 to 5 hours, 3 - 5 to 10 hours, or 4 - >10 hours) \\
-15 failures - number of past class failures (numeric: n if 1<=n<3, else 4) \\
-16 schoolsup - extra educational support (binary: yes or no) \\
-17 famsup - family educational support (binary: yes or no) \\
-18 paid - extra paid classes within the course subject (Math or Portuguese) (binary: yes or no) \\
-19 activities - extra-curricular activities (binary: yes or no) \\
-20 nursery - attended nursery school (binary: yes or no) \\
-21 higher - wants to take higher education (binary: yes or no) \\
-22 internet - Internet access at home (binary: yes or no) \\
-23 romantic - with a romantic relationship (binary: yes or no) \\
-24 famrel - quality of family relationships (numeric: from 1 - very bad to 5 - excellent) \\
-25 freetime - free time after school (numeric: from 1 - very low to 5 - very high) \\
-26 goout - going out with friends (numeric: from 1 - very low to 5 - very high) \\
-27 Dalc - workday alcohol consumption (numeric: from 1 - very low to 5 - very high) \\
-28 Walc - weekend alcohol consumption (numeric: from 1 - very low to 5 - very high) \\
-29 health - current health status (numeric: from 1 - very bad to 5 - very good) \\
-30 absences - number of school absences (numeric: from 0 to 93) \\
+This data approach student achievement in secondary education of two Portuguese schools. The data attributes include student grades, demographic, social and school related features) and it was collected by using school reports and questionnaires. Two datasets are provided regarding the performance in two distinct subjects: Mathematics (mat) and Portuguese language (por). In [Cortez and Silva, 2008], the two datasets were modeled under binary/five-level classification and regression tasks. Important note: the target attribute G3 has a strong correlation with attributes G2 and G1. This occurs because G3 is the final year grade (issued at the 3rd period), while G1 and G2 correspond to the 1st and 2nd period grades. It is more difficult to predict G3 without G2 and G1, but such prediction is much more useful (see paper source for more details). \\
+Attribute Information: \\
+1 school - student's school  \\
+2 sex - student's sex  \\
+3 age - student's age  \\
+4 address - student's home address type  \\
+5 famsize - family size  \\
+6 Pstatus - parent's cohabitation status  \\
+7 Medu - mother's education  \\
+8 Fedu - father's education  \\
+9 Mjob - mother's job  \\
+10 Fjob - father's job  \\
+11 reason - reason to choose this school  \\
+12 guardian - student's guardian  \\
+13 traveltime - home to school travel time  \\
+14 studytime - weekly study time \\
+15 failures - number of past class failures  \\
+16 schoolsup - extra educational support  \\
+17 famsup - family educational support  \\
+18 paid - extra paid classes within the course subject (Math or Portuguese) \\
+19 activities - extra-curricular activities  \\
+20 nursery - attended nursery school  \\
+21 higher - wants to take higher education  \\
+22 internet - Internet access at home  \\
+23 romantic - with a romantic relationship  \\
+24 famrel - quality of family relationships  \\
+25 freetime - free time after school  \\
+26 goout - going out with friends \\
+27 Dalc - workday alcohol consumption  \\
+28 Walc - weekend alcohol consumption  \\
+29 health - current health status  \\
+30 absences - number of school absences \\
 \section{Background and Motivation}
 This data set is using student's information to predict his/her grades in Math and Portuguese.
 We choose this data set because from ourselves experiences, learning a foreign language and learning the math both needs some ``talents''. But the talent needed for language and math seems different. We want to unveil the relation between students' info and their grades in math and Portuguese and also to verify our assumption that the ``talents'' for math and Portuguese are different.
 \section{Project Objectives}
-1. check the correlation and 
-\subsection{Discover the trends}
-\subsection{Discover the outliers}
-\subsection{}
+\subsection{Build informative and vivid plots that helps understand the data}
+\subsubsection{Discover the trends and relationships}
+Any trend among the relationships? Any features are strongly correlated?  good students always good? 
+\subsubsection{Discover the outliers}
+Any student stands out? or departure from the main trend? For example, for certain kind of student's background, he/she should get some good or bad grade, but his/her performance is far away from our expectation. Why this outliers happen? We expect our visualization will offer some evidence or hints to discover and help explain outliers.
+\subsubsection{Discover the feature Importance}
+We could split the data according to some 
 \section{Data}
 We obtain our data from the UCI machine learning data repo: \\
 http://archive.ics.uci.edu/ml/datasets/Student+Performance
 \section{Data Processing}
+The data contains many ordinary features, we need to translate these ordinary features to dummy variables.
 \section{Visualization Design}
-1.
+\subsection{Trends discovery}
+1. parallel plot to show the trend relationships between features. 
+2. stream plot to show the trend of grads for different class of students.
+\subsection{Outlier discovery}
+3. Apply multiple projection method to discover the best projection method and according to the projection method to discovery the 
+\subsection{Feature Importance Discovery}
 \section{Must-Have Features}
+1. Allow zoom-in and zoom-out for the trends' and outliers' detail.
+2. Allow customized manipulation of data.
+3. Multi-dimension visualization plot which could involve multiple features while offering as much information as possible. 
+3. Apply distinguishable color map to represent the categories.
 \section{Optional Features}
 \section{Project Schedule}
-\section{UCI data repo}
+\section{Reference}
+UCI data repo
 \end{document}
