--- a/Proposal.tex
+++ b/Proposal.tex
@@ -45,8 +45,7 @@ We choose this data set because from ourselves experiences, learning a foreign l
 Any trend among the relationships? Any features are strongly correlated?  good students always good? 
 \subsubsection{Discover the outliers}
 Any student stands out? or departure from the main trend? For example, for certain kind of student's background, he/she should get some good or bad grade, but his/her performance is far away from our expectation. Why this outliers happen? We expect our visualization will offer some evidence or hints to discover and help explain outliers.
-\subsubsection{Discover the feature Importance}
-We could split the data according to some 
+
 \section{Data}
 We obtain our data from the UCI machine learning data repo: \\
 http://archive.ics.uci.edu/ml/datasets/Student+Performance
@@ -54,16 +53,16 @@ http://archive.ics.uci.edu/ml/datasets/Student+Performance
 The data contains many ordinary features, we need to translate these ordinary features to dummy variables.
 \section{Visualization Design}
 \subsection{Trends discovery}
-1. parallel plot to show the trend relationships between features. 
+1. parallel plot to show the trend relationships between features. \\
 2. stream plot to show the trend of grads for different class of students.
 \subsection{Outlier discovery}
 3. Apply multiple projection method to discover the best projection method and according to the projection method to discovery the 
 \subsection{Feature Importance Discovery}
 \section{Must-Have Features}
-1. Allow zoom-in and zoom-out for the trends' and outliers' detail.
-2. Allow customized manipulation of data.
-3. Multi-dimension visualization plot which could involve multiple features while offering as much information as possible. 
-3. Apply distinguishable color map to represent the categories.
+1. Allow zoom-in and zoom-out for the trends' and outliers' detail. \\
+2. Allow customized manipulation of data. \\ 
+3. Multi-dimension visualization plot which could involve multiple features while offering as much information as possible. \\
+3. Apply distinguishable color map to represent the categories. \\
 \section{Optional Features}
 \section{Project Schedule}
 \section{Reference}
