--- a/Proposal.tex
+++ b/Proposal.tex
@@ -40,24 +40,25 @@ Attribute Information: \\
 This data set is using student's information to predict his/her grades in Math and Portuguese.
 We choose this data set because from ourselves experiences, learning a foreign language and learning the math both needs some ``talents''. But the talent needed for language and math seems different. We want to unveil the relation between students' info and their grades in math and Portuguese and also to verify our assumption that the ``talents'' for math and Portuguese are different.
 \section{Project Objectives}
-\subsection{Build informative and vivid plots that helps understand the data}
-\subsubsection{Discover the trends and relationships}
+\subsection{Build Informative and Vivid Plots}
+The main purpose of visualization 
+\subsubsection{Discover the trends and Relationships}
 Any trend among the relationships? Any features are strongly correlated?  good students always good? 
-\subsubsection{Discover the outliers}
+\subsubsection{Discover Outliers}
 Any student stands out? or departure from the main trend? For example, for certain kind of student's background, he/she should get some good or bad grade, but his/her performance is far away from our expectation. Why this outliers happen? We expect our visualization will offer some evidence or hints to discover and help explain outliers.
 
 \section{Data}
-We obtain our data from the UCI machine learning data repo: \\
+Our data are obtained from the UCI machine learning data repo: \\
 http://archive.ics.uci.edu/ml/datasets/Student+Performance
 \section{Data Processing}
 The data contains many ordinary features, we need to translate these ordinary features to dummy variables.
 \section{Visualization Design}
-\subsection{Trends discovery}
+\subsection{Trends Discovery}
 1. parallel plot to show the trend relationships between features. \\
 2. stream plot to show the trend of grads for different class of students.
-\subsection{Outlier discovery}
+\subsection{Outlier Discovery}
 3. Apply multiple projection method to discover the best projection method and according to the projection method to discovery the 
-\subsection{Feature Importance Discovery}
+\subsection{Comparison of Initial Design and}
 \section{Must-Have Features}
 1. Allow zoom-in and zoom-out for the trends' and outliers' detail. \\
 2. Allow customized manipulation of data. \\ 
