--- a/Proposal.tex
+++ b/Proposal.tex
@@ -152,7 +152,7 @@ Through this selection, we will continue working on the Parallel plot and Stream
 \item Customized Analysis function.
 \end{itemize}
 \section{Project Schedule}
-1. Nov.1 - Nov.7 : Compare results of projected scatter plot and graph plot and make our final decision.\\
+1. Nov.1 - Nov.7 : Compare results of projected scatter plot and graph plot, make our final decision.\\
 2. Nov.8 - Nov.14: Design parallel plot,  stream plot and the interactive buttons.\\ 
 3. Nov.15 - Nov.21: Complete zoom-in and zoom-out  function.\\
 4. Nov.22 - Nov.28: Fix bug and make some modifications to get a more perfect final visualization layout.
