--- a/Proposal.tex
+++ b/Proposal.tex
@@ -156,7 +156,8 @@ Through this selection, we will continue working on the Parallel plot and Stream
 1. Nov.1 - Nov.7 : Compare results of projected scatter plot and graph plot, make our final decision.\\
 2. Nov.8 - Nov.14: Design parallel plot,  stream plot and the interactive buttons.\\ 
 3. Nov.15 - Nov.21: Complete zoom-in and zoom-out  function.\\
-4. Nov.22 - Nov.28: Fix bug and make some modifications to get a more perfect final visualization layout.
+4. Nov.22 - Nov.28: Fix bug and make some modifications to get a more perfect final visualization layout.\\
+5. Nov.29 - Dec.12 : Prepare documents and video.\\
 \section{Reference}
 UCI data repo Link: {http://archive.ics.uci.edu/ml/datasets/Student+Performance}
 \end{document}
