--- a/Process book.tex
+++ b/Process book.tex
@@ -184,7 +184,23 @@ Currently, we implement the server side code (server.py). We use python and web.
 \end{figure}
 \end{description}
 
-This version lay out features of data on the very top. The user can browse and refer to this feature list when the user explore in the trend analysis and dimension reduction analysis.The parallel plot shows the trend of our important features. Through the slide bar on parallel plot, people can select different values of certain features, the corresponding lines will be highlight. The bar chart will show the Students Number vs Final Grades of the user selected range on the parallel plot. Student Number vs Feature correspondingly shows the user selected feature.The last part is the projection of Dimension reduction. The user can explore the dimension reduction by adding the different weights to the dimension reduction menthod. Different groups are labeled by different colors. Four dimension reduction method, PCA, MDS, TSNE and  ISOMAP, are in the dropdown menu. The user can select the the dimension reduction method based his/her domain knowdge.
+This version lay out features of data on the very top. The user can browse and refer to this feature list when the user explore in the trend analysis and dimension reduction analysis.The parallel plot shows the trend of our important features. Through the slide bar on parallel plot, people can select different values of certain features, the corresponding lines will be highlight. The bar chart will show the Students Number vs Final Grades of the user selected range on the parallel plot. Student Number vs Feature correspondingly shows the user selected feature.The last part is the projection of Dimension reduction. The user can explore the dimension reduction by adding the different weights to the dimension reduction menthod. Different groups are labeled by different colors. Four dimension reduction method, PCA, MDS, TSNE and  ISOMAP, are in the dropdown menu. The user can select the the dimension reduction method based his/her domain knowdge.\\
+
+
+
+\subsection{Version3}
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.3]{11.png}
+\includegraphics[scale=0.3]{22.png}
+\includegraphics[scale=0.3]{33.png}
+\includegraphics[scale=0.3]{44.png}
+\caption{version2}
+\end{figure}
+\end{description}
+
+Version 3 add a tracking dimension reduction plot. The user now can compare the changes of the plot after they change the dimension reduction method and weights.\\\
+
 
 \section{Evaluation}
 What did you learn about the data by using your visualizations? How did you answer your questions? How well does your visualization work, and how could you further improve it?
