final process book

--- a/Process book.tex
+++ b/Process book.tex
@@ -203,7 +203,7 @@ Version 3 add a tracking dimension reduction plot. The user now can compare the 
 
 
 \section{Evaluation}
-What did you learn about the data by using your visualizations? How did you answer your questions? How well does your visualization work, and how could you further improve it?
+In this project, we learned how to use server to compute and return the data that you would like to visualize. In our case, we visualize the scatter plot of different the dimension reduction method. The server handles the computation for us, which is very convenient and fast. 
 
 
 
